// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stringify feature util real offers Offer 1675331211247628801 1`] = `
Array [
  "ГСК «Машиноместо»",
  "Собственность",
  "Парковка подземная",
  "Железобетонный",
  "Водопровод",
  "Отопление",
  "Электроснабжение",
  "Автоматических ворот нет",
  "Видеонаблюдение",
  "Доступ на объект 24/7",
  "Пожарная сигнализация",
  "Пропускная система",
  "Автомойка",
]
`;

exports[`Stringify feature util real offers Offer 1910572006735216640 1`] = `
Array [
  "Отделка — косметический ремонт",
  "Санузел совмещённый",
  "Лоджия",
  "На полу ламинат",
  "Вид из окон во двор и на улицу",
  "Телефон",
  "Интернета нет",
  "Мебель",
  "Мебели на кухне нет",
  "Встроенная техника",
]
`;

exports[`Stringify feature util real offers Offer 2368124054583941120 1`] = `
Array [
  "Возможность прописки",
  "Туалет в доме",
  "Душ в доме",
  "Отопление",
  "Водопровода нет",
  "Канализация",
  "Электроснабжения нет",
  "Газ",
  "Кухни нет",
  "Бассейна нет",
  "Бильярда нет",
  "Сауна",
]
`;

exports[`Stringify feature util real offers Offer 2388945512219475200 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 2486833153976465153 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 2967405380307298463 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 3841539645434907393 1`] = `
Array [
  "Возможность прописки",
  "Туалет в доме",
  "Душ в доме",
  "Отопление",
  "Водопровод",
  "Канализация",
  "Электроснабжение",
  "Газа нет",
  "Кухня",
  "Бассейна нет",
  "Бильярда нет",
  "Сауна",
]
`;

exports[`Stringify feature util real offers Offer 3982838136380954880 1`] = `
Array [
  "Бизнес-центр",
  "Класс бизнес-центра — A",
  "Отделка — косметический ремонт",
  "Вход отдельный",
]
`;

exports[`Stringify feature util real offers Offer 3985417349005242422 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 4178644675543341312 1`] = `
Array [
  "Отделка — косметический ремонт",
  "Санузел раздельный",
]
`;

exports[`Stringify feature util real offers Offer 4588041564717681408 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 5029225678196137728 1`] = `
Array [
  "ГСК «Вал»",
  "Кооператив",
  "Железобетонный",
  "Водопровода нет",
  "Отопления нет",
  "Электроснабжение",
  "Автоматических ворот нет",
  "Видеонаблюдение",
  "Доступа на объект 24/7 нет",
  "Пожарной сигнализации нет",
  "Пропускная система",
  "Смотровая яма",
  "Автомойки нет",
  "Автосервис",
]
`;

exports[`Stringify feature util real offers Offer 5152214338702606693 1`] = `
Array [
  "Встроенное помещение, жилой дом",
  "Интернета нет",
  "Мебели нет",
  "Лифта нет",
  "Мусоропровода нет",
]
`;

exports[`Stringify feature util real offers Offer 5152266535455580514 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 5179204074689404343 1`] = `
Array [
  "Бизнес-центр",
  "Класс бизнес-центра — B+",
  "Состояние отличное",
  "Кондиционер",
  "Пожарная сигнализация",
  "Лифт",
  "1 телефонная линия",
  "Возможность добавить телефонные линии",
  "Электроснабжение",
  "Вентиляция",
  "Канализация",
  "Отопление",
  "Водопровод",
  "Грузовой лифт",
]
`;

exports[`Stringify feature util real offers Offer 5211544075310407681 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 5217212054901559809 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 5254973568545450240 1`] = `
Array [
  "Собственность",
  "Кирпичный",
  "Охрана",
]
`;

exports[`Stringify feature util real offers Offer 5413677472560653824 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 5478349734607340288 1`] = `
Array [
  "Отделка — косметический ремонт",
  "Санузел раздельный",
]
`;

exports[`Stringify feature util real offers Offer 5619085084072273152 1`] = `
Array [
  "Бизнес-центр «Гидеон Энтерпрайз»",
  "Класс бизнес-центра — B",
  "Отделка — требуется ремонт",
  "Интернет",
  "Кондиционер",
  "Пропускная система",
  "Доступ на объект 24/7",
  "Охраняемая парковка",
  "Заведение питания в здании",
  "Пожарная сигнализация",
  "Вход отдельный",
  "Возможность выбрать оператора связи",
  "Возможность добавить телефонные линии",
  "Вентиляция",
]
`;

exports[`Stringify feature util real offers Offer 5752181058418234624 1`] = `
Array [
  "Туалета нет",
  "Душа нет",
]
`;

exports[`Stringify feature util real offers Offer 6066490924903967463 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 6118565685537966080 1`] = `
Array [
  "ГСК «Эльбрус-11»",
  "По доверенности",
  "Парковка многоуровневая",
  "Кирпичный",
  "Водопровода нет",
  "Отопление",
  "Электроснабжение",
  "Автоматические ворота",
  "Видеонаблюдение",
  "Доступ на объект 24/7",
  "Охрана",
  "Пожарная сигнализация",
  "Пропускная система",
  "Смотровой ямы нет",
  "Автомойки нет",
  "Автосервиса нет",
]
`;

exports[`Stringify feature util real offers Offer 6138723254147916032 1`] = `
Array [
  "ГСК «Исток»",
  "Кооператив",
  "Кирпичный",
  "Электроснабжение",
  "Видеонаблюдение",
  "Доступ на объект 24/7",
  "Автомойка",
  "Автосервис",
]
`;

exports[`Stringify feature util real offers Offer 6302897158639643935 1`] = `
Array [
  "Санузел совмещённый",
  "Лоджия",
  "Вид из окон во двор",
]
`;

exports[`Stringify feature util real offers Offer 6529433429371256064 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 6900000047329405696 1`] = `
Array [
  "Бизнес-центр",
  "Класс бизнес-центра — A",
  "Отделка — косметический ремонт",
  "Вход отдельный",
]
`;

exports[`Stringify feature util real offers Offer 7324333459856457472 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 7444370360693349120 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 7825327396047447809 1`] = `
Array [
  "Отделка — евроремонт",
  "Санузел раздельный",
]
`;

exports[`Stringify feature util real offers Offer 8108045632893637377 1`] = `Array []`;

exports[`Stringify feature util real offers Offer 8355282261759501312 1`] = `
Array [
  "Отделка — косметический ремонт",
  "Санузел раздельный",
  "На полу ламинат",
  "Вид из окон на улицу",
  "Телефона нет",
  "Интернет",
  "Мебель",
  "Мебель на кухне",
]
`;

exports[`Stringify feature util real offers Offer 8601383174272214031 1`] = `
Array [
  "Встроенное помещение, жилой дом",
  "Отделка — требуется ремонт",
  "Вентиляция",
  "Отопление",
]
`;

exports[`Stringify feature util real offers Offer 8925888208617835520 1`] = `
Array [
  "Бизнес-центр «Renkli Rüyalar Oteli»",
  "Класс бизнес-центра — A+",
  "Кондиционера нет",
  "Пожарная сигнализация",
  "Вход общий",
  "Вентиляции нет",
]
`;
